add_executable(defangIPaddr defangIPaddr.cpp)
add_executable(maxIncreaseKeepingSkyline maxIncreaseKeepingSkyline.cpp)
add_executable(hammingDistance hammingDistance.cpp)
add_executable(allCellsDistOrder allCellsDistOrder.cpp)
add_executable(peakIndexInMountainArray peakIndexInMountainArray.cpp)
add_executable(diStringMatch diStringMatch.cpp)
add_executable(arrayPairSum arrayPairSum.cpp)
add_executable(minDeletionSize minDeletionSize.cpp)
add_executable(recentCounter recentCounter.cpp)
add_executable(postorder postorder.cpp)
add_executable(checkPossibility checkPossibility.cpp)
add_executable(reverse reverse.cpp)
add_executable(buddyStrings buddyStrings.cpp)
add_executable(heightChecker heightChecker.cpp)
add_executable(sortArrayByParityII sortArrayByParityII.cpp)
add_executable(numUniqueEmails numUniqueEmails.cpp)
add_executable(preorder preorder.cpp)
add_executable(subdomainVisits subdomainVisits.cpp)
add_executable(isUnivalTree isUnivalTree.cpp)
add_executable(fib fib.cpp)
add_executable(countCharacters countCharacters.cpp)
add_executable(relativeSortArray relativeSortArray.cpp)
add_executable(projectionArea projectionArea.cpp)
add_executable(bstToGst bstToGst.cpp)
add_executable(insertIntoBST insertIntoBST.cpp)
add_executable(findSolution findSolution.cpp)
add_executable(reverseWords reverseWords.cpp)
add_executable(numTilePossibilities numTilePossibilities.cpp)
add_executable(increasingBST increasingBST.cpp)
add_executable(isPalindrome isPalindrome.cpp)
add_executable(commonChars commonChars.cpp)
add_executable(maxDepth maxDepth.cpp)
add_executable(minimumAbsDifference minimumAbsDifference.cpp)
add_executable(middleNode middleNode.cpp)
add_executable(removeDuplicates removeDuplicates.cpp)
add_executable(smallestRangeI smallestRangeI.cpp)
add_executable(transpose transpose.cpp)
add_executable(findOcurrences findOcurrences.cpp)
add_executable(shortestToChar shortestToChar.cpp)
add_executable(leafSimilar leafSimilar.cpp)
add_executable(thirdMax thirdMax.cpp)
add_executable(convertToTitle convertToTitle.cpp)
add_executable(minCostClimbingStairs minCostClimbingStairs.cpp)
add_executable(isSubsequence isSubsequence.cpp)
add_executable(constructMaximumBinaryTree constructMaximumBinaryTree.cpp)
add_executable(divisorGame divisorGame.cpp)
add_executable(climbStairs climbStairs.cpp)
add_executable(isToeplitzMatrix isToeplitzMatrix.cpp)
add_executable(maxSumDivThree maxSumDivThree.cpp)
add_executable(findComplement findComplement.cpp)
add_executable(lastStoneWeight lastStoneWeight.cpp)
add_executable(singleNumber singleNumber.cpp)
add_executable(distributeCandies distributeCandies.cpp)
add_executable(islandPerimeter islandPerimeter.cpp)
add_executable(findPairs findPairs.cpp)
add_executable(numRookCaptures numRookCaptures.cpp)
add_executable(sumRootToLeaf sumRootToLeaf.cpp)
add_executable(maximum-depth-of-binary-tree maximum-depth-of-binary-tree.cpp)
add_executable(binary-gap.cpp binary-gap.cpp)