add_executable(defangIPaddr defangIPaddr.cpp)
add_executable(maxIncreaseKeepingSkyline maxIncreaseKeepingSkyline.cpp)
add_executable(hammingDistance hammingDistance.cpp)
add_executable(allCellsDistOrder allCellsDistOrder.cpp)
add_executable(peakIndexInMountainArray peakIndexInMountainArray.cpp)
add_executable(diStringMatch diStringMatch.cpp)
add_executable(arrayPairSum arrayPairSum.cpp)
add_executable(minDeletionSize minDeletionSize.cpp)
add_executable(recentCounter recentCounter.cpp)
add_executable(postorder postorder.cpp)
add_executable(checkPossibility checkPossibility.cpp)
add_executable(reverse reverse.cpp)
add_executable(buddyStrings buddyStrings.cpp)
add_executable(heightChecker heightChecker.cpp)
add_executable(sortArrayByParityII sortArrayByParityII.cpp)
add_executable(numUniqueEmails numUniqueEmails.cpp)
add_executable(preorder preorder.cpp)
add_executable(subdomainVisits subdomainVisits.cpp)
add_executable(isUnivalTree isUnivalTree.cpp)
add_executable(fib fib.cpp)
add_executable(countCharacters countCharacters.cpp)
add_executable(relativeSortArray relativeSortArray.cpp)
add_executable(projectionArea projectionArea.cpp)
add_executable(bstToGst bstToGst.cpp)
add_executable(insertIntoBST insertIntoBST.cpp)
add_executable(findSolution findSolution.cpp)
add_executable(reverseWords reverseWords.cpp)
add_executable(numTilePossibilities numTilePossibilities.cpp)
add_executable(increasingBST increasingBST.cpp)
add_executable(isPalindrome isPalindrome.cpp)
add_executable(commonChars commonChars.cpp)
add_executable(maxDepth maxDepth.cpp)
add_executable(minimumAbsDifference minimumAbsDifference.cpp)
add_executable(middleNode middleNode.cpp)
add_executable(removeDuplicates removeDuplicates.cpp)
add_executable(smallestRangeI smallestRangeI.cpp)
add_executable(transpose transpose.cpp)
add_executable(findOcurrences findOcurrences.cpp)
add_executable(shortestToChar shortestToChar.cpp)
add_executable(leafSimilar leafSimilar.cpp)
add_executable(thirdMax thirdMax.cpp)
add_executable(convertToTitle convertToTitle.cpp)
add_executable(minCostClimbingStairs minCostClimbingStairs.cpp)
add_executable(isSubsequence isSubsequence.cpp)
add_executable(constructMaximumBinaryTree constructMaximumBinaryTree.cpp)
add_executable(divisorGame divisorGame.cpp)
add_executable(climbStairs climbStairs.cpp)
add_executable(isToeplitzMatrix isToeplitzMatrix.cpp)
add_executable(maxSumDivThree maxSumDivThree.cpp)
add_executable(findComplement findComplement.cpp)
add_executable(lastStoneWeight lastStoneWeight.cpp)
add_executable(singleNumber singleNumber.cpp)
add_executable(distributeCandies distributeCandies.cpp)
add_executable(islandPerimeter islandPerimeter.cpp)
add_executable(findPairs findPairs.cpp)
add_executable(numRookCaptures numRookCaptures.cpp)
add_executable(sumRootToLeaf sumRootToLeaf.cpp)
add_executable(maximum-depth-of-binary-tree maximum-depth-of-binary-tree.cpp)
add_executable(binary-gap.cpp binary-gap.cpp)
add_executable(maximum-number-of-balloons maximum-number-of-balloons.cpp)
add_executable(uncommon-words-from-two-sentences uncommon-words-from-two-sentences.cpp)
add_executable(trim-a-binary-search-tree trim-a-binary-search-tree.cpp)
add_executable(next-greater-element-i next-greater-element-i.cpp)
add_executable(construct-binary-search-tree-from-preorder-traversal construct-binary-search-tree-from-preorder-traversal.cpp)
add_executable(invert-binary-tree invert-binary-tree.cpp)
add_executable(baseball-game baseball-game.cpp)
add_executable(goat-latin goat-latin.cpp)
add_executable(reshape-the-matrix reshape-the-matrix.cpp)
add_executable(number-of-lines-to-write-string number-of-lines-to-write-string.cpp)
add_executable(fizz-buzz fizz-buzz.cpp)
add_executable(distribute-candies-to-people distribute-candies-to-people.cpp)
add_executable(complement-of-base-10-integer complement-of-base-10-integer.cpp)
add_executable(average-of-levels-in-binary-tree average-of-levels-in-binary-tree.cpp)
add_executable(reverse-linked-list reverse-linked-list.cpp)
add_executable(largest-perimeter-triangle largest-perimeter-triangle.cpp)
add_executable(n-th-tribonacci-number n-th-tribonacci-number.cpp)
add_executable(intersection-of-two-arrays intersection-of-two-arrays.cpp)
add_executable(fair-candy-swap fair-candy-swap.cpp)
add_executable(surface-area-of-3d-shapes surface-area-of-3d-shapes.cpp)
add_executable(largest-triangle-area largest-triangle-area.cpp)
add_executable(longest-uncommon-subsequence-i longest-uncommon-subsequence-i.cpp)
add_executable(delete-node-in-a-linked-list delete-node-in-a-linked-list.cpp)
add_executable(reverse-only-letters reverse-only-letters.cpp)
add_executable(monotonic-array monotonic-array.cpp)
add_executable(nim-game nim-game.cpp)
add_executable(partition-array-into-three-parts-with-equal-sum partition-array-into-three-parts-with-equal-sum.cpp)
add_executable(rotated-digits rotated-digits.cpp)
add_executable(max-consecutive-ones max-consecutive-ones.cpp)
add_executable(shortest-completing-word shortest-completing-word.cpp)
add_executable(distance-between-bus-stops distance-between-bus-stops.cpp)
add_executable(move-zeroes move-zeroes.cpp)
add_executable(employee-importance employee-importance.cpp)
add_executable(verifying-an-alien-dictionary verifying-an-alien-dictionary.cpp)
add_executable(find-all-numbers-disappeared-in-an-array find-all-numbers-disappeared-in-an-array.cpp)
add_executable(count-binary-substrings count-binary-substrings.cpp)
add_executable(two-city-scheduling two-city-scheduling.cpp)
add_executable(add-digits add-digits.cpp)
add_executable(majority-element majority-element.cpp)
add_executable(valid-anagram valid-anagram.cpp)
add_executable(find-the-difference find-the-difference.cpp)
add_executable(roman-to-integer roman-to-integer.cpp)
add_executable(reorder-data-in-log-files reorder-data-in-log-files.cpp)
add_executable(convert-sorted-array-to-binary-search-tree convert-sorted-array-to-binary-search-tree.cpp)
add_executable(best-time-to-buy-and-sell-stock-ii best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(two-sum-iv-input-is-a-bst two-sum-iv-input-is-a-bst.cpp)
add_executable(greatest-common-divisor-of-strings greatest-common-divisor-of-strings.cpp)
add_executable(convert-bst-to-greater-tree convert-bst-to-greater-tree.cpp)
add_executable(excel-sheet-column-number excel-sheet-column-number.cpp)
add_executable(detect-capital detect-capital.cpp)
add_executable(construct-string-from-binary-tree construct-string-from-binary-tree.cpp)
add_executable(two-sum-ii-input-array-is-sorted two-sum-ii-input-array-is-sorted.cpp)
add_executable(flood-fill flood-fill.cpp)
add_executable(cousins-in-binary-tree cousins-in-binary-tree.cpp)
add_executable(same-tree same-tree.cpp)
add_executable(minimum-absolute-difference-in-bst minimum-absolute-difference-in-bst.cpp)
add_executable(ransom-note ransom-note.cpp)