add_executable(defangIPaddr defangIPaddr.cpp)
add_executable(maxIncreaseKeepingSkyline maxIncreaseKeepingSkyline.cpp)
add_executable(hammingDistance hammingDistance.cpp)
add_executable(allCellsDistOrder allCellsDistOrder.cpp)
add_executable(peakIndexInMountainArray peakIndexInMountainArray.cpp)
add_executable(diStringMatch diStringMatch.cpp)
add_executable(arrayPairSum arrayPairSum.cpp)
add_executable(minDeletionSize minDeletionSize.cpp)
add_executable(recentCounter recentCounter.cpp)
add_executable(postorder postorder.cpp)
add_executable(checkPossibility checkPossibility.cpp)
add_executable(reverse reverse.cpp)
add_executable(buddyStrings buddyStrings.cpp)
add_executable(heightChecker heightChecker.cpp)
add_executable(sortArrayByParityII sortArrayByParityII.cpp)
add_executable(numUniqueEmails numUniqueEmails.cpp)
add_executable(preorder preorder.cpp)
add_executable(subdomainVisits subdomainVisits.cpp)
add_executable(isUnivalTree isUnivalTree.cpp)
add_executable(fib fib.cpp)
add_executable(countCharacters countCharacters.cpp)
add_executable(relativeSortArray relativeSortArray.cpp)
add_executable(projectionArea projectionArea.cpp)
add_executable(bstToGst bstToGst.cpp)
add_executable(insertIntoBST insertIntoBST.cpp)
add_executable(findSolution findSolution.cpp)
add_executable(reverseWords reverseWords.cpp)
add_executable(numTilePossibilities numTilePossibilities.cpp)
add_executable(increasingBST increasingBST.cpp)
add_executable(isPalindrome isPalindrome.cpp)
add_executable(commonChars commonChars.cpp)
add_executable(maxDepth maxDepth.cpp)
add_executable(minimumAbsDifference minimumAbsDifference.cpp)
add_executable(middleNode middleNode.cpp)
add_executable(removeDuplicates removeDuplicates.cpp)
add_executable(smallestRangeI smallestRangeI.cpp)
add_executable(transpose transpose.cpp)
add_executable(findOcurrences findOcurrences.cpp)
add_executable(shortestToChar shortestToChar.cpp)
add_executable(leafSimilar leafSimilar.cpp)
add_executable(thirdMax thirdMax.cpp)
add_executable(convertToTitle convertToTitle.cpp)
add_executable(minCostClimbingStairs minCostClimbingStairs.cpp)
add_executable(isSubsequence isSubsequence.cpp)
add_executable(constructMaximumBinaryTree constructMaximumBinaryTree.cpp)
add_executable(divisorGame divisorGame.cpp)
add_executable(climbStairs climbStairs.cpp)
add_executable(isToeplitzMatrix isToeplitzMatrix.cpp)
add_executable(maxSumDivThree maxSumDivThree.cpp)
add_executable(findComplement findComplement.cpp)
add_executable(lastStoneWeight lastStoneWeight.cpp)
add_executable(singleNumber singleNumber.cpp)
add_executable(distributeCandies distributeCandies.cpp)
add_executable(islandPerimeter islandPerimeter.cpp)
add_executable(findPairs findPairs.cpp)
add_executable(numRookCaptures numRookCaptures.cpp)
add_executable(sumRootToLeaf sumRootToLeaf.cpp)
add_executable(maximum-depth-of-binary-tree maximum-depth-of-binary-tree.cpp)
add_executable(binary-gap.cpp binary-gap.cpp)
add_executable(maximum-number-of-balloons maximum-number-of-balloons.cpp)
add_executable(uncommon-words-from-two-sentences uncommon-words-from-two-sentences.cpp)
add_executable(trim-a-binary-search-tree trim-a-binary-search-tree.cpp)
add_executable(next-greater-element-i next-greater-element-i.cpp)
add_executable(construct-binary-search-tree-from-preorder-traversal construct-binary-search-tree-from-preorder-traversal.cpp)
add_executable(invert-binary-tree invert-binary-tree.cpp)
add_executable(baseball-game baseball-game.cpp)
add_executable(goat-latin goat-latin.cpp)
add_executable(reshape-the-matrix reshape-the-matrix.cpp)
add_executable(number-of-lines-to-write-string number-of-lines-to-write-string.cpp)
add_executable(fizz-buzz fizz-buzz.cpp)
add_executable(distribute-candies-to-people distribute-candies-to-people.cpp)
add_executable(complement-of-base-10-integer complement-of-base-10-integer.cpp)
add_executable(average-of-levels-in-binary-tree average-of-levels-in-binary-tree.cpp)
add_executable(reverse-linked-list reverse-linked-list.cpp)
add_executable(largest-perimeter-triangle largest-perimeter-triangle.cpp)
add_executable(n-th-tribonacci-number n-th-tribonacci-number.cpp)
add_executable(intersection-of-two-arrays intersection-of-two-arrays.cpp)
add_executable(fair-candy-swap fair-candy-swap.cpp)
add_executable(surface-area-of-3d-shapes surface-area-of-3d-shapes.cpp)
add_executable(largest-triangle-area largest-triangle-area.cpp)
add_executable(longest-uncommon-subsequence-i longest-uncommon-subsequence-i.cpp)
add_executable(delete-node-in-a-linked-list delete-node-in-a-linked-list.cpp)
add_executable(reverse-only-letters reverse-only-letters.cpp)
add_executable(monotonic-array monotonic-array.cpp)
add_executable(nim-game nim-game.cpp)
add_executable(partition-array-into-three-parts-with-equal-sum partition-array-into-three-parts-with-equal-sum.cpp)
add_executable(rotated-digits rotated-digits.cpp)
add_executable(max-consecutive-ones max-consecutive-ones.cpp)
add_executable(shortest-completing-word shortest-completing-word.cpp)
add_executable(distance-between-bus-stops distance-between-bus-stops.cpp)
add_executable(move-zeroes move-zeroes.cpp)
add_executable(employee-importance employee-importance.cpp)
add_executable(verifying-an-alien-dictionary verifying-an-alien-dictionary.cpp)
add_executable(find-all-numbers-disappeared-in-an-array find-all-numbers-disappeared-in-an-array.cpp)
add_executable(count-binary-substrings count-binary-substrings.cpp)
add_executable(two-city-scheduling two-city-scheduling.cpp)
add_executable(add-digits add-digits.cpp)
add_executable(majority-element majority-element.cpp)
add_executable(valid-anagram valid-anagram.cpp)
add_executable(find-the-difference find-the-difference.cpp)
add_executable(roman-to-integer roman-to-integer.cpp)
add_executable(reorder-data-in-log-files reorder-data-in-log-files.cpp)
add_executable(convert-sorted-array-to-binary-search-tree convert-sorted-array-to-binary-search-tree.cpp)
add_executable(best-time-to-buy-and-sell-stock-ii best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(two-sum-iv-input-is-a-bst two-sum-iv-input-is-a-bst.cpp)
add_executable(greatest-common-divisor-of-strings greatest-common-divisor-of-strings.cpp)
add_executable(convert-bst-to-greater-tree convert-bst-to-greater-tree.cpp)
add_executable(excel-sheet-column-number excel-sheet-column-number.cpp)
add_executable(detect-capital detect-capital.cpp)
add_executable(construct-string-from-binary-tree construct-string-from-binary-tree.cpp)
add_executable(two-sum-ii-input-array-is-sorted two-sum-ii-input-array-is-sorted.cpp)
add_executable(flood-fill flood-fill.cpp)
add_executable(cousins-in-binary-tree cousins-in-binary-tree.cpp)
add_executable(same-tree same-tree.cpp)
add_executable(minimum-absolute-difference-in-bst minimum-absolute-difference-in-bst.cpp)
add_executable(ransom-note ransom-note.cpp)
add_executable(lemonade-change lemonade-change.cpp)
add_executable(first-unique-character-in-a-string first-unique-character-in-a-string.cpp)
add_executable(degree-of-an-array degree-of-an-array.cpp)
add_executable(merge-two-sorted-lists merge-two-sorted-lists.cpp)
add_executable(maximize-sum-of-array-after-k-negations maximize-sum-of-array-after-k-negations.cpp)
add_executable(convert-binary-number-in-a-linked-list-to-integer convert-binary-number-in-a-linked-list-to-integer.cpp)
add_executable(subtract-the-product-and-sum-of-digits-of-an-integer subtract-the-product-and-sum-of-digits-of-an-integer.cpp)
add_executable(sum-of-two-integers sum-of-two-integers.cpp)
add_executable(sum-of-left-leaves sum-of-left-leaves.cpp)
add_executable(find-numbers-with-even-number-of-digits find-numbers-with-even-number-of-digits.cpp)
add_executable(compare-strings-by-frequency-of-the-smallest-character compare-strings-by-frequency-of-the-smallest-character.cpp)
add_executable(binary-search binary-search.cpp)
add_executable(missing-number missing-number.cpp)
add_executable(minimum-moves-to-equal-array-elements minimum-moves-to-equal-array-elements.cpp)
add_executable(find-the-town-judge find-the-town-judge.cpp)
add_executable(image-smoother image-smoother.cpp)
add_executable(minimum-index-sum-of-two-lists minimum-index-sum-of-two-lists.cpp)
add_executable(minimum-time-visiting-all-points minimum-time-visiting-all-points.cpp)
add_executable(replace-elements-with-greatest-element-on-right-side replace-elements-with-greatest-element-on-right-side.cpp)
add_executable(keyboard-row keyboard-row.cpp)
add_executable(binary-tree-level-order-traversal-ii binary-tree-level-order-traversal-ii.cpp)
add_executable(relative-ranks relative-ranks.cpp)
add_executable(1-bit-and-2-bit-characters 1-bit-and-2-bit-characters.cpp)
add_executable(range-addition-ii range-addition-ii.cpp)
add_executable(longest-palindrome longest-palindrome.cpp)
add_executable(find-n-unique-integers-sum-up-to-zero find-n-unique-integers-sum-up-to-zero.cpp)
add_executable(deepest-leaves-sum deepest-leaves-sum.cpp)
add_executable(positions-of-large-groups positions-of-large-groups.cpp)
add_executable(group-the-people-given-the-group-size-they-belong-to group-the-people-given-the-group-size-they-belong-to.cpp)
add_executable(diameter-of-binary-tree diameter-of-binary-tree.cpp)
add_executable(remove-element remove-element.cpp)
add_executable(decompress-run-length-encoded-list decompress-run-length-encoded-list.cpp)
add_executable(all-paths-from-source-to-target all-paths-from-source-to-target.cpp)
add_executable(maximum-69-number maximum-69-number.cpp)
add_executable(sum-of-nodes-with-even-valued-grandparent sum-of-nodes-with-even-valued-grandparent.cpp)
add_executable(decrypt-string-from-alphabet-to-integer-mapping decrypt-string-from-alphabet-to-integer-mapping.cpp)
add_executable(maximum-product-of-three-numbers maximum-product-of-three-numbers.cpp)
add_executable(play-with-chips play-with-chips.cpp)
add_executable(rank-transform-of-an-array rank-transform-of-an-array.cpp)
add_executable(sort-the-matrix-diagonally sort-the-matrix-diagonally.cpp)
add_executable(all-elements-in-two-binary-search-trees all-elements-in-two-binary-search-trees.cpp)
add_executable(delete-leaves-with-a-given-value delete-leaves-with-a-given-value.cpp)
add_executable(binary-tree-pruning binary-tree-pruning.cpp)
add_executable(the-k-weakest-rows-in-a-matrix the-k-weakest-rows-in-a-matrix.cpp)
add_executable(last-stone-weight last-stone-weight.cpp)
add_executable(remove-palindromic-subsequences remove-palindromic-subsequences.cpp)
add_executable(minimum-distance-between-bst-nodes minimum-distance-between-bst-nodes.cpp)
add_executable(binary-number-with-alternating-bits binary-number-with-alternating-bits.cpp)
add_executable(duplicate-zeros duplicate-zeros.cpp)
add_executable(add-strings add-strings.cpp)
add_executable(can-place-flowers can-place-flowers.cpp)
add_executable(shortest-unsorted-continuous-subarray shortest-unsorted-continuous-subarray.cpp)
add_executable(partition-labels partition-labels.cpp)
add_executable(happy-number happy-number.cpp)
add_executable(lowest-common-ancestor-of-a-binary-search-tree lowest-common-ancestor-of-a-binary-search-tree.cpp)
add_executable(power-of-three power-of-three.cpp)
add_executable(number-of-steps-to-reduce-a-number-to-zero number-of-steps-to-reduce-a-number-to-zero.cpp)
add_executable(find-smallest-letter-greater-than-target find-smallest-letter-greater-than-target.cpp)
add_executable(minimum-number-of-steps-to-make-two-strings-anagram minimum-number-of-steps-to-make-two-strings-anagram.cpp)
add_executable(minimum-add-to-make-parentheses-valid minimum-add-to-make-parentheses-valid.cpp)
add_executable(matrix-block-sum matrix-block-sum.cpp)
add_executable(construct-the-rectangle construct-the-rectangle.cpp)
add_executable(balanced-binary-tree balanced-binary-tree.cpp)
add_executable(maximum-level-sum-of-a-binary-tree maximum-level-sum-of-a-binary-tree.cpp)
add_executable(validate-binary-tree-nodes validate-binary-tree-nodes.cpp)
add_executable(path-in-zigzag-labelled-binary-tree path-in-zigzag-labelled-binary-tree.cpp)
add_executable(subsets subsets.cpp)
add_executable(battleships-in-a-board battleships-in-a-board.cpp)
add_executable(counting-bits counting-bits.cpp)
add_executable(find-and-replace-pattern find-and-replace-pattern.cpp)
add_executable(permutations permutations.cpp)
add_executable(generate-parentheses generate-parentheses.cpp)
add_executable(find-mode-in-binary-search-tree find-mode-in-binary-search-tree.cpp)
add_executable(contains-duplicate-ii contains-duplicate-ii.cpp)
add_executable(power-of-two power-of-two.cpp)
add_executable(convert-integer-to-the-sum-of-two-no-zero-integers convert-integer-to-the-sum-of-two-no-zero-integers.cpp)
add_executable(min-stack min-stack.cpp)
add_executable(reverse-string-ii reverse-string-ii.cpp)
add_executable(house-robber house-robber.cpp)
add_executable(path-sum-iii path-sum-iii.cpp)
add_executable(complex-number-multiplication complex-number-multiplication.cpp)
add_executable(binary-tree-tilt binary-tree-tilt.cpp)
add_executable(long-pressed-name long-pressed-name.cpp)